# dpdk-netbench

./: INTERVIEW_NOTES.md  README.md  prompt.md
netbench-copilot/: .env.example  .gitignore  DESIGN.md  FILE_TREE.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  pyproject.toml
netbench-copilot/.github/workflows/: ci.yml
netbench-copilot/data/golden_prompts/: ask_prompts.yaml  eval_cases.yaml  plan_prompts.yaml
netbench-copilot/data/kb/: manifest.yaml
netbench-copilot/data/sample_runs/: README.md
netbench-copilot/data/sample_runs/cryptoperf_run_001/logs/: stdout.txt
netbench-copilot/data/sample_runs/l3fwd_run_001/logs/: stdout.txt
netbench-copilot/data/sample_runs/testpmd_run_001/logs/: stdout.txt
netbench-copilot/docs/: architecture.md  dataset.md  evaluation.md  runbook.md  safety.md  tuning.md
netbench-copilot/docs/benchmarks/: cryptoperf.md  l3fwd_l2fwd.md  testpmd.md
netbench-copilot/scripts/: 00_bootstrap.sh  10_build_index.sh  20_demo.sh  30_add_pdf.sh  40_export_dataset.sh  50_run_eval.sh  60_optional_finetune.sh
netbench-copilot/src/netbench/: __init__.py  app.py  config.py
netbench-copilot/src/netbench/benchmarks/: base.py  cryptoperf.py  l2fwd.py  l3fwd.py  testpmd.py
netbench-copilot/src/netbench/dataset/: export.py  redact.py  templates.py
netbench-copilot/src/netbench/eval/: harness.py  metrics.py
netbench-copilot/src/netbench/finetune/: eval_lora.py  train_lora.py
netbench-copilot/src/netbench/graph/: policies.py  state.py  workflow.py
netbench-copilot/src/netbench/kb/: __init__.py  citations.py  ingest.py  retrieve.py
netbench-copilot/src/netbench/mcp_server/: __init__.py  schemas.py  server.py  tools.py
netbench-copilot/src/netbench/parsing/: common.py  cryptoperf_parser.py  l3fwd_parser.py  testpmd_parser.py
netbench-copilot/src/netbench/store/: __init__.py  db.py  models.py
netbench-copilot/src/netbench/tools/: langchain_tools.py  mcp_client.py
netbench-copilot/src/netbench/tuning/: advisor.py  envprobe.py  rules.py  validators.py
netbench-copilot/tests/: test_compare_runs.py  test_grounding_enforced.py  test_kb_grounding.py  test_mcp_tools.py  test_parsers_cryptoperf.py  test_parsers_l3fwd.py  test_parsers_testpmd.py  test_plan_schema.py  test_validators.py  utils.py
